<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Encuesta"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_materia3"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:gravity="center_horizontal"
        android:text="Bienvenido"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/txt_descripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/descripcionFuncNotas"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/txt_nota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/nota"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="12sp"
        android:textStyle="bold|italic" />


    <TextView
        android:id="@+id/txt_n1"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:text="@string/data_1" />

    <EditText
        android:id="@+id/edt_resp1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName" />


    <TextView
        android:id="@+id/txtn2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/data_2" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cb1_q2"
            android:layout_width="124dp"
            android:layout_height="wrap_content"
            android:text="Futbol" />

        <CheckBox
            android:id="@+id/cb2_q2"
            android:layout_width="107dp"
            android:layout_height="wrap_content"
            android:text="Basket" />

        <CheckBox
            android:id="@+id/cb3_q2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Jogging" />

    </LinearLayout>

    <TextView
        android:id="@+id/txtE2"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:text="@string/data_3" />

    <RadioGroup
        android:id="@+id/grupo1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb1_q3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Si" />

        <RadioButton
            android:id="@+id/rb2_q3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="No" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_Enviar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnMostrar"
        android:text="@string/verificar"
        android:textSize="12sp" />

</LinearLayout>